--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Counter app</title>
 </head>
 <body>
-    <h1>People entered:</h1>
+    div class="all">
+        <h1>People entered:</h1>
         <h2 id="count-el">0</h2>
-        <button id="increment-btn" onclick="increment()">INCREMENT</button>
+        <div class="operations">
+        <button id="increment-btn" onclick="plus()">+</button>
+        <button id="increment-btn" onclick="minus()">-</button>
+        </div>
+        <button id="save-btn" onclick="save()">Save</button>
+        <p id="save-el">Entires so far:</p>
+        </div>
         <script src="index.js"></script>
 </body>
 </html>
